<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--It is so cool that you can set the layout of xml from style="@style/MainActivity"-->

    <TextView
        android:id="@+id/tv_add_a_pet"
        style="@style/MainActivity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_add_pet"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tPetName"
        style="@style/MainActivity"
        android:layout_below="@+id/tv_add_a_pet"
        android:hint="@string/label_pet_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tOwnerName"
        style="@style/MainActivity"
        android:layout_below="@+id/tPetName"
        android:hint="@string/label_owner_name_"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tPetType"
        style="@style/MainActivity"
        android:layout_below="@+id/tOwnerName"
        android:hint="@string/label_pet_type"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tPetBreed"
        style="@style/MainActivity"
        android:layout_below="@+id/tPetType"
        android:hint="@string/label_pet_breed"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tPetAge"
        style="@style/MainActivity"
        android:layout_below="@+id/tPetType"
        android:hint="@string/label_pet_age"
        android:inputType="number" />

    <Button
        android:id="@+id/saveButton"
        style="@style/MainActivity"
        android:layout_below="@id/tPetAge"
        android:background="@color/colorAccent"
        android:text="@string/label_button_save"

        />
    <Button
        android:id="@+id/viewDataButton"
        style="@style/MainActivity"
        android:layout_below="@id/saveButton"
        android:background="@color/colorPrimary"
        android:text="@string/label_button_view_data"

        />

</RelativeLayout>